2009-04-15  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/Rule.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Fixed text
	  editor issues.

2009-04-15  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Selection.cs:
	* Mono.TextEditor.Vi/ViMode.cs:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/LineSegment.cs:
	* Mono.TextEditor/GutterMargin.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor/ClipboardActions.cs:
	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor/SelectionActions.cs:
	* Mono.TextEditor/DefaultEditActions.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Worked on the
	  text editor. Added block selection mode & fixed some bugs.

	* Makefile.am:
	* gtk-gui/objects.xml:
	* Mono.TextEditor.csproj: 

2009-04-14  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: removed debug
	  message.

2009-04-14  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/Rule.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: fixed 'Bug
	  494534 - ignorecase="true" attribute isn't working on xml
	  "Syntax Mode" files.'.

2009-04-13  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: fixed little
	  issue with regex match highlighting.

2009-04-09  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/Rule.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting.Regex/Regex.cs:
	* Mono.TextEditor.Highlighting/SyntaxModeService.cs:
	  Optimized/Refactored the highlighting engine. (Bug 387486 -
	  Syntax scheme improvements).

2009-04-08  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Caret.cs: Virtual spaces now works with
	  up/down keys.

2009-04-08  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Changed the virtual space
	  click behavior.

2009-04-08  Mike Krüger  <mkrueger@novell.com>

	* SyntaxModes/XmlSyntaxMode.xml: